# qudoufengsdk

./: .gitignore  README.md  build.gradle  settings.gradle
qdfsdk/: CMakeLists.txt  build.gradle  proguard-rules.pro
qdfsdk/src/androidTest/java/com/qudoufeng/vehiclesdk/: ExampleInstrumentedTest.java
qdfsdk/src/main/: AndroidManifest.xml
qdfsdk/src/main/java/com/qudoufeng/vehiclesdk/: DFSdk.java  MyApplication.java
qdfsdk/src/main/java/com/qudoufeng/vehiclesdk/base/: BaseActivity.java  BaseFragment.java  IBasePresenter.java  IBaseView.java
qdfsdk/src/main/java/com/qudoufeng/vehiclesdk/eventmsg/: EventMessage.java  MusicMessage.java  NaviMsg.java
qdfsdk/src/main/java/com/qudoufeng/vehiclesdk/model/: AlbumModel.java  AppConfigResp.java  CacheEntity.java  GetFileTokenReq.java  GetFileTokenResp.java  GetGpsRouteModel.java  GpsRouteResp.java  ImageEntity.java  LoginReq.java  LoginResp.java  RoadBookModel.java  RoadBookResp.java  UserProfile.java  (+4 more)
qdfsdk/src/main/res/drawable/: placeholder.xml  ring_placeholder.xml  video_volume_progress_bg.xml  white_radius_shape_8dp.xml
qdfsdk/src/main/res/layout/: activity_login.xml  activity_main.xml  float_window_layout.xml
qdfsdk/src/main/res/raw/: notify_buy.aac
qdfsdk/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
qdfsdk/src/main/res/values-sw1080dp/: dimens.xml
qdfsdk/src/main/res/values-sw1440dp/: dimens.xml
qdfsdk/src/main/res/values-sw720dp/: dimens.xml
qdfsdk/src/main/res/xml/: file_paths.xml
qdfsdk/src/test/java/com/qudoufeng/vehiclesdk/: ExampleUnitTest.java
(+32 files in other folders)
